@@ -10,6 +10,9 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
+/**
+ * Utility class that provide some methods for Lunatic-Model objects.
+ */
 @Slf4j
 public class LunaticUtils {
 
@@ -24,7 +27,6 @@ public class LunaticUtils {
         return components.stream()
                 .filter(component -> !component.getComponentType().equals(ComponentTypeEnum.SEQUENCE))
                 .filter(component -> !component.getComponentType().equals(ComponentTypeEnum.SUBSEQUENCE))
-                .filter(component -> !component.getComponentType().equals(ComponentTypeEnum.FILTER_DESCRIPTION))
                 .toList();
     }
 
@@ -109,7 +111,7 @@ public class LunaticUtils {
      * Return the response name of the component that belong to the given pairwise links. This method checks if
      * the inner component is valid.
      * @param pairwiseLinks A pairwise links component.
-     * @return The pairwise inner component.
+     * @return The response name of the pairwise inner component.
      * @throws LunaticPairwiseException if the component in the pairwise is invalid.
      */
     public static String getPairwiseResponseVariable(PairwiseLinks pairwiseLinks) {
@@ -127,7 +129,7 @@ public class LunaticUtils {
     public static ComponentType getPairwiseInnerComponent(PairwiseLinks pairwiseLinks) {
         // Get the pairwise inner component
         checkPairwiseComponentSize(pairwiseLinks);
-        ComponentType pairwiseComponent = pairwiseLinks.getComponents().get(0);
+        ComponentType pairwiseComponent = pairwiseLinks.getComponents().getFirst();
         // Check that this component has a complying type
         if (! (ComponentTypeEnum.DROPDOWN.equals(pairwiseComponent.getComponentType()) ||
                 ComponentTypeEnum.RADIO.equals(pairwiseComponent.getComponentType()) ||
