@@ -1,10 +1,10 @@
 package fr.insee.eno.core.processing.out.steps.lunatic;
 
-import fr.insee.eno.core.model.lunatic.MissingBlock;
 import fr.insee.lunatic.model.flat.*;
+import fr.insee.lunatic.model.flat.variable.CollectedVariableType;
+import fr.insee.lunatic.model.flat.variable.CollectedVariableValues;
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -35,29 +35,26 @@ class LunaticAddMissingVariablesPairwiseTest {
         assertNotNull(dropdown.getMissingResponse());
         assertEquals("FOO_LINKS_MISSING", dropdown.getMissingResponse().getName());
         //
-        Optional<IVariableType> pairwiseMissingVariable = lunaticQuestionnaire.getVariables().stream()
+        Optional<CollectedVariableType> pairwiseMissingVariable = lunaticQuestionnaire.getVariables().stream()
+                .filter(CollectedVariableType.class::isInstance)
+                .map(CollectedVariableType.class::cast)
                 .filter(variable -> "FOO_LINKS_MISSING".equals(variable.getName()))
                 .findAny();
         assertTrue(pairwiseMissingVariable.isPresent());
-        assertInstanceOf(VariableTypeTwoDimensionsArray.class, pairwiseMissingVariable.get());
+        assertInstanceOf(CollectedVariableValues.DoubleArray.class, pairwiseMissingVariable.get().getValues());
         //
-        List<MissingBlock> missingEntries = lunaticQuestionnaire.getMissingBlock().getAny().stream()
-                .map(MissingBlock.class::cast).toList();
-        assertEquals(2, missingEntries.size());
+        MissingType missingType = lunaticQuestionnaire.getMissingBlock();
+        assertEquals(2, missingType.countMissingEntries());
         //
-        Optional<MissingBlock> pairwiseMissingBlock = missingEntries.stream()
-                .filter(missingBlock -> "FOO_LINKS_MISSING".equals(missingBlock.getMissingName()))
-                .findAny();
-        assertTrue(pairwiseMissingBlock.isPresent());
-        assertEquals(1, pairwiseMissingBlock.get().getNames().size());
-        assertEquals("FOO_LINKS", pairwiseMissingBlock.get().getNames().get(0));
+        MissingEntry pairwiseMissingEntry = missingType.getMissingEntry("FOO_LINKS_MISSING");
+        assertNotNull(pairwiseMissingEntry);
+        assertEquals(1, pairwiseMissingEntry.getCorrespondingVariables().size());
+        assertEquals("FOO_LINKS", pairwiseMissingEntry.getCorrespondingVariables().getFirst());
         //
-        Optional<MissingBlock> pairwiseReverseMissingBlock = missingEntries.stream()
-                .filter(missingBlock -> "FOO_LINKS".equals(missingBlock.getMissingName()))
-                .findAny();
-        assertTrue(pairwiseReverseMissingBlock.isPresent());
-        assertEquals(1, pairwiseReverseMissingBlock.get().getNames().size());
-        assertEquals("FOO_LINKS_MISSING", pairwiseReverseMissingBlock.get().getNames().get(0));
+        MissingEntry pairwiseReverseMissingEntry = missingType.getMissingEntry("FOO_LINKS");
+        assertNotNull(pairwiseReverseMissingEntry);
+        assertEquals(1, pairwiseReverseMissingEntry.getCorrespondingVariables().size());
+        assertEquals("FOO_LINKS_MISSING", pairwiseReverseMissingEntry.getCorrespondingVariables().getFirst());
     }
 
 }
